# many2one-route-optimization

./: README.md  config.yaml  pyproject.toml  requests.csv
docs/: requirenments.md  software_test_plan.md
src/many2one_route_optimization/: optimize_many2one.py
tests/: test_optimize.py
